# TIM2TENJI_skill

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: PACKAGING.md  USAGE.md
tenji_converter/: cli.py
tenji_converter/core/: compiler.py  excel_writer.py  memory_loader.py  memory_rules.py  normalizer.py  repair.py  validator.py  visual_verify.py
