[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tim2tenji-skill"
version = "0.2.0"
description = "Package OpenClaw-style TENJI Excel conversion with reusable skill knowledge gates"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "TIM2TENJI Team" }
]
license = { text = "Proprietary" }
dependencies = [
  "openpyxl>=3.1.2"
]

[project.scripts]
tenji-convert = "tenji_converter.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tenji_converter*"]
